# legend-guardian-workspace

./: .env.example  .flake8  .gitignore  .markdownlint.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  README_DOCKER.md  build-legend-local.sh  docker-compose.yml  main.py  package-lock.json  package.json  push-to-azure.sh  pyproject.toml  requirements.txt  secrets.env  secrets.example  test_final_structure.py
.github/: CODEOWNERS  pull_request_template.md
artifacts/: Legend-FINOS.collection.json
azure-deployment/: AI_AGENT_TROUBLESHOOTING_FLOW.md  Dockerfile.studio  README.md  add-mongodb.sh  azure-legend.env  azure-resources.bicep  build-and-push-images.sh  deploy-azure.bash  deploy-guardian-agent.sh  deploy-legend-correct-images.sh  deploy-legend-juju-azure.sh  deploy-legend-minimal.sh  deploy-legend-no-mongo.sh  deploy-legend-simple-azure.sh  deploy-legend.sh  deploy-simple.sh  legend-backend.yaml  legend-complete.yaml  legend-minimal.yaml  legend-simple.yaml  legend-studio-fixed.yaml  legend-working.yaml  mongodb-values.yaml  mongodb.yaml  quick-start.sh
ci/: .gitlab-ci.yml
deploy/: DEPLOYMENT_GUIDE.md  DEPLOYMENT_TEST_REPORT.md  GITLAB_OAUTH_SETUP.md  README.md  STRUCTURE_OVERVIEW.md  base.env  check-code-quality.sh  common.env  deploy-all.sh  deploy.sh  setup-secrets.sh  validate-config.sh  validate.sh
docs/: README.md  architecture-with-images.md  architecture.html  architecture.md  generate_diagrams.sh  generate_pdf.py  generate_pdf_fixed.py  generate_pdf_ultimate.py  generate_svg_diagrams.py  print_architecture.sh
scripts/: init_rag.py  smoke.sh  (+4 more)
(+276 files in other folders)
